--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,8 +8,8 @@ nav {
   top: 0;
   width: 100vw;
   z-index: 1;
-  /* height: 120px; */
-  height: 80px;
+  height: 120px;
+  /* height: 80px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,8 +53,27 @@ nav {
   color: #F44336; /* Adjust color of the icon */
 }
 
+.fa-angles-down {
+  animation: bounce 2s infinite;
+  cursor:pointer; /* to look clickable */
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+  }
+  40% {
+      transform: translateY(-5px);
+  }
+  60% {
+      transform: translateY(-15px);
+  }
+}
+
+
+
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
-@media (max-width: 800px) {
+@media (max-width: 1024px) {
   .flex-container {
       flex-direction: column;
       padding-top: 0.5em;
@@ -65,9 +84,11 @@ nav {
       text-align: center;
       margin-top: 0;
       padding: 0 1.5em;
+      margin-right: 0;
   }
 
   nav {
       height: auto;
+      /* z-index:-1; */
   }
 }
